--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@
     }
 
     #list_box {
-        background-color: #FBFBFD;
+        background-image: linear-gradient(#6989B8,white);
         height: calc(100vh - 91px);
         width: 100%;
         overflow: auto;
@@ -221,9 +221,9 @@
 
     #logo {
         display: block;
-        width: 70%;
+        width: 50%;
         max-width: 250px;
-        margin-top: 5%;
+        margin-top: 3%;
         margin-left: auto;
         margin-right: auto;
     }
@@ -274,6 +274,11 @@
         box-sizing: border-box;
         height: 45px;
         margin: 10px;
+    }
+
+    .media_title i {
+        vertical-align: middle;
+        color: #7CA0D8;
     }
 
     .media_title {
@@ -539,7 +544,7 @@
 
     @media only screen and (max-width: 992px) {
         #start {
-            background-image: linear-gradient(#EDF0F5, white);
+            background-image: linear-gradient(white,#6989B8);
             background-size: cover;
             background-repeat: no-repeat;
             background-position: bottom;
@@ -632,43 +637,46 @@
         text-overflow: ellipsis;
     }
 
-.download_option, .share_option {
-    padding: 10px;
-    font-size: 14px;
-    line-height: 24px;
-}
+    .download_option,
+    .share_option {
+        padding: 10px;
+        font-size: 14px;
+        line-height: 24px;
+    }
 
-.download_option i, .share_option i {
-    margin-right: 10px;
-    vertical-align: middle;
-}
+    .download_option i,
+    .share_option i {
+        margin-right: 10px;
+        vertical-align: middle;
+    }
 
-#search {
-    position: fixed;
-    top: 0;
-    z-index: 100;
-    background-color: white;
-    line-height: 56px;
-    height: 56px;
-    color: black;
-    box-sizing: border-box;
-    padding-left: 12px;
-    padding-right: 12px;
-    overflow: hidden;
-    border-bottom: none;
-}
+    #search {
+        position: fixed;
+        top: 0;
+        z-index: 100;
+        background-color: white;
+        line-height: 56px;
+        height: 56px;
+        color: black;
+        box-sizing: border-box;
+        padding-left: 12px;
+        padding-right: 12px;
+        overflow: hidden;
+        border-bottom: none;
+    }
 
-#search:hover, #search:focus {
-    box-shadow: none;
-}
+    #search:hover,
+    #search:focus {
+        box-shadow: none;
+    }
 
-.search_result {
-    padding: 20px;
-    background-color: rgba(255, 255, 255, 0.71);
-    border-bottom: solid 1px #bababa;
-}
+    .search_result {
+        padding: 20px;
+        background-color: rgba(255, 255, 255, 0.71);
+        border-bottom: solid 1px #bababa;
+    }
 
-.search_result_title {
-    font-size: 130%;
-    margin-bottom: 12px;
-}
+    .search_result_title {
+        font-size: 130%;
+        margin-bottom: 12px;
+    }
